--- a/package.json
+++ b/package.json
@@ -9,10 +9,17 @@
   },
   "dependencies": {
     "@contentful/rich-text-react-renderer": "^15.0.0",
+    "aos": "^2.3.4",
     "contentful": "^8.4.2",
     "next": "10.0.8",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "styled-jsx": "^3.4.4"
+  },
+  "devDependencies": {
+    "@types/aos": "^3.0.4",
+    "@types/node": "^16.4.3",
+    "@types/react": "^17.0.15",
+    "typescript": "^4.3.5"
   }
 }
